[project]
name = "unofficial-polestar-mcp"
version = "0.2.0"
description = "Unofficial MCP server for controlling your Polestar from any MCP-capable AI assistant — climate, charging, locks, location and vehicle status. Not affiliated with or endorsed by Polestar."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Damas" }]
keywords = ["mcp", "polestar", "ev", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "unofficial-polestar-api>=0.3.0",
]

[project.scripts]
polestar-mcp = "polestar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polestar_mcp"]
